<resources>
    <string name="app_name">Notes</string>
    <string name="save_note">Save icon</string>
    <string name="delete_note">Delete</string>
    <string name="share_note">Share note</string>
    <string name="note_details">Note details</string>
    <string name="notes_list">Notes list</string>
    <string name="add_note">Add note</string>
    <string name="communicate">Communicate</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="app_logo">App logo</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="made_by">Made by</string>
    <string name="github">GitHub</string>
    <string name="github_repository">GitHub repository</string>
    <string name="send_me_email">Send me email</string>
    <string name="send_feedback">Send feedback</string>
    <string name="dev_email">cjkrol43@gmail.com</string>
    <string name="dev_github">https://github.com/FatED42/Notes</string>
    <string name="dialog_delete_title">Delete this note?</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="note_deleted">Note deleted</string>
    <string name="note_not_deleted">Note not deleted</string>
    <string name="edit_note">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>
    <string name="action_list">Notes</string>
</resources>