<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple_500"
        android:gravity="center"
        android:paddingTop="@dimen/margin"
        android:paddingBottom="@dimen/margin"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
        android:textColor="@color/nav_header_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/made_by"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:gravity="center"
        android:text="@string/made_by"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_logo" />

    <ImageButton
        android:id="@+id/githubBtn"
        android:layout_width="@dimen/about_icons_size"
        android:layout_height="@dimen/about_icons_size"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:contentDescription="@string/github"
        android:scaleType="fitCenter"
        android:src="@drawable/github"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/made_by" />

    <TextView
        android:id="@+id/githubText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/github_repository"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintBottom_toBottomOf="@id/githubBtn"
        app:layout_constraintStart_toEndOf="@id/githubBtn"
        app:layout_constraintTop_toTopOf="@id/githubBtn" />

    <ImageButton
        android:id="@+id/emailBtn"
        android:layout_width="@dimen/about_icons_size"
        android:layout_height="@dimen/about_icons_size"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/margin"
        android:layout_marginTop="@dimen/margin"
        android:contentDescription="@string/send_me_email"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_contact_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/githubBtn" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin"
        android:text="@string/send_me_email"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintBottom_toBottomOf="@id/emailBtn"
        app:layout_constraintStart_toEndOf="@id/emailBtn"
        app:layout_constraintTop_toTopOf="@id/emailBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>